--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,17 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="">
 </header>
-
+<nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
+    <a class="navbar-brand">Navbar</a>
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a class="nav-link" href="/html/index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/html/players.html">Roster</a>
+      </li>
+    </ul>
+  </nav>
 <body>
     <main class="container">
         <div id="Thing" class="row g-3">
