--- a/html/index.html
+++ b/html/index.html
@@ -11,19 +11,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="">
+    <link rel="icon" type="image/png" href="/imgs/SF.jpg">
+    <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
+      <a class="navbar-brand">Navbar</a>
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link" href="/html/index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/html/players.html">Roster</a>
+        </li>
+      </ul>
+    </nav>
 </header>
-<nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-    <a class="navbar-brand">Navbar</a>
-    <ul class="nav nav-pills">
-      <li class="nav-item">
-        <a class="nav-link" href="/html/index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/html/players.html">Roster</a>
-      </li>
-    </ul>
-  </nav>
+
 <body>
     <main class="container">
         <div id="Thing" class="row g-3">
