--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="/imgs/SF.jpg">
+    <link rel="icon" type="image/x-icon" href="/imgs/SF.ico">
     <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
       <a class="navbar-brand">Navbar</a>
       <ul class="nav nav-pills">
