--- a/html/players.html
+++ b/html/players.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-<header>
+<head>
     <title>My Team Roster</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -10,8 +10,7 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="/imgs/SF.jpg">
+    <link rel="stylesheet" href="/css/players.css">
     <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3"></nav>
     <a class="navbar-brand">Navbar</a>
     <ul class="nav nav-pills">
@@ -23,7 +22,7 @@
       </li>
     </ul>
   </nav>
-</header>
+</head>
 
 
 <body>
