--- a/html/index.html
+++ b/html/index.html
@@ -11,14 +11,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/style.css">
-    <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-      <a class="navbar-brand">Navbar</a>
+    <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3 border border-2 border-black">
+      <a class="navbar-brand"><img src="/imgs/SF6.jpg" width="125" height="110"></img></a>
       <ul class="nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link" href="/html/index.html">Home</a>
+          <a class="nav-link fs-1" href="/html/index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/html/players.html">Roster</a>
+          <a class="nav-link fs-1" href="/html/players.html">Roster</a>
         </li>
       </ul>
     </nav>
@@ -27,7 +27,15 @@
 <body>
     <main class="container">
         <div id="Thing" class="row g-3">
-            
+          <p class="fs-1">
+            Street Fighter was introduced to the States in December 1987 and has solidified its place as a fan favorite fighting game.
+            Created by Capcom, its had a multitude of games including many popular spin off games.
+            Its created a large and diverse cast over the years full of many interesting characters with unique fighting style.
+          </p>
+          <img src="/imgs/SF.jpg">
+          <p class="fs-1">
+            Check out every Street Fighter character in the series here!
+          </p>
         </div>
 
     </main>
