--- a/html/index.html
+++ b/html/index.html
@@ -2,53 +2,49 @@
 <html lang="en">
 
 <head>
-    <title>My Team Roster</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <title>My Team Roster</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <!-- Bootstrap CSS v5.2.1 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/css/style.css">
-    <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3 border border-2 border-black">
-      <a class="navbar-brand"><img src="/imgs/SF6.jpg" width="125" height="110"></img></a>
-      <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a class="nav-link fs-1" href="/html/index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link fs-1" href="/html/players.html">Roster</a>
-        </li>
-      </ul>
-    </nav>
+  <!-- Bootstrap CSS v5.2.1 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://use.typekit.net/wat0ivg.css">
+  <nav id="navbar-example2" class="navbar bg-transparent px-3 mb-3">
+    <a class="navbar-brand"><img src="/imgs/SF6.jpg" width="125" height="110"></img></a>
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a class="nav-link fs-1" href="/html/index.html">Home</a>
+      </li>
+      <li class="nav
+      -item">
+        <a class="nav-link fs-1" href="/html/players.html">Roster</a>
+      </li>
+    </ul>
+  </nav>
 </head>
 
 <body>
-    <main class="container">
-        <div id="Thing" class="row g-3">
-          <p class="fs-1">
-            Street Fighter was introduced to the States in December 1987 and has solidified its place as a fan favorite fighting game.
-            Created by Capcom, its had a multitude of games including many popular spin off games.
-            Its created a large and diverse cast over the years full of many interesting characters with unique fighting style.
-          </p>
-          <img src="/imgs/SF.jpg">
-          <p class="fs-1">
-            Check out every Street Fighter character in the series here!
-          </p>
-        </div>
+  <main class="container">
+    <div id="Thing" class="row g-3 justify-content-center">
+      <div class="col-auto text-center">
+        <img src="/imgs/SF.jpg" class="image-sizing img-fluid">
+      </div>
+    </div>
 
-    </main>
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
+  </main>
+  <!-- Bootstrap JavaScript Libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
 
-    <script src="/js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 
 </html>
