--- a/html/players.html
+++ b/html/players.html
@@ -8,17 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS v5.2.1 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/css/players.css">
-    <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3"></nav>
-    <a class="navbar-brand">Navbar</a>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://use.typekit.net/wat0ivg.css">
+  <nav id="navbar-example2" class="navbar bg-transparent px-3 mb-3">
+    <a class="navbar-brand"><img src="/imgs/SF6.jpg" width="125" height="110"></img></a>
     <ul class="nav nav-pills">
       <li class="nav-item">
-        <a class="nav-link" href="/html/index.html">Home</a>
+        <a class="nav-link fs-1" href="/html/index.html">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/html/players.html">Roster</a>
+      <li class="nav
+      -item">
+        <a class="nav-link fs-1" href="/html/players.html">Roster</a>
       </li>
     </ul>
   </nav>
