--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,10 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://use.typekit.net/wat0ivg.css">
-  <nav id="navbar-example2" class="navbar bg-transparent px-3 mb-3">
+</head>
+
+<header class="hero-section text-white text-center d-flex align-items-center justify-content-center row border-bottom border-2">
+    <nav id="navbar-example2" class="navbar bg-transparent px-3 mb-3 sticky-top">
     <a class="navbar-brand"><img src="/imgs/SF6.jpg" width="125" height="110"></img></a>
     <ul class="nav nav-pills">
       <li class="nav-item">
@@ -24,13 +27,20 @@
       </li>
     </ul>
   </nav>
-</head>
+</header>
 
 <body>
-  <main class="container">
+  <main class="container mt-3">
     <div id="Thing" class="row g-3 justify-content-center">
       <div class="col-auto text-center">
         <img src="/imgs/SF.jpg" class="image-sizing img-fluid">
+        <p class="fs-1 text-white">
+          Street Fighter was introduced to the States in December 1987 and has solidified its place as a fan favorite
+          fighting game.
+          Created by Capcom, its had a multitude of games including many popular spin off games.
+          Its created a large and diverse cast over the years full of many interesting characters with unique fighting
+          style.
+        </p>
       </div>
     </div>
 
