--- a/html/players.html
+++ b/html/players.html
@@ -18,8 +18,7 @@
       <li class="nav-item">
         <a class="nav-link fs-1" href="/html/index.html">Home</a>
       </li>
-      <li class="nav
-      -item">
+      <li class="nav-item">
         <a class="nav-link fs-1" href="/html/players.html">Roster</a>
       </li>
     </ul>
