--- a/html/players.html
+++ b/html/players.html
@@ -12,18 +12,22 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://use.typekit.net/wat0ivg.css">
-  <nav id="navbar-example2" class="navbar bg-transparent px-3 mb-3">
+</head>
+
+<header class="hero-section text-white text-center d-flex align-items-center justify-content-center row border-bottom border-2">
+    <nav id="navbar-example2" class="navbar bg-transparent px-3 mb-3">
     <a class="navbar-brand"><img src="/imgs/SF6.jpg" width="125" height="110"></img></a>
     <ul class="nav nav-pills">
       <li class="nav-item">
         <a class="nav-link fs-1" href="/html/index.html">Home</a>
       </li>
-      <li class="nav-item">
+      <li class="nav
+      -item">
         <a class="nav-link fs-1" href="/html/players.html">Roster</a>
       </li>
     </ul>
   </nav>
-</head>
+</header>
 
 
 <body>
