--- a/index.html
+++ b/index.html
@@ -10,51 +10,11 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.typekit.net/wat0ivg.css">
 </head>
 
-<header class="hero-section text-white text-center d-flex align-items-center justify-content-center row border-bottom border-2">
-    <nav id="navbar-example2" class="navbar bg-transparent px-3 mb-3 sticky-top">
-    <a class="navbar-brand"><img src="imgs/SF6.jpg" width="125" height="110"></img></a>
-    <ul class="nav nav-pills">
-      <li class="nav-item">
-        <a class="nav-link fs-1" href="html/index.html">Home</a>
-      </li>
-      <li class="nav
-      -item">
-        <a class="nav-link fs-1" href="html/players.html">Roster</a>
-      </li>
-    </ul>
-  </nav>
-</header>
-
 <body>
-  <main class="container mt-3">
-    <div id="Thing" class="row g-3 justify-content-center">
-      <div class="col-auto text-center">
-        <img src="imgs/SF.jpg" class="image-sizing img-fluid">
-        <p class="fs-1 text-white">
-          Street Fighter was introduced to the States in December 1987 and has solidified its place as a fan favorite
-          fighting game.
-          Created by Capcom, its had a multitude of games including many popular spin off games.
-          Its created a large and diverse cast over the years full of many interesting characters with unique fighting
-          style.
-        </p>
-      </div>
-    </div>
 
-  </main>
-  <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-    crossorigin="anonymous"></script>
-
-  <script src="js/script.js"></script>
 </body>
-
 </html>
