--- a/players.html
+++ b/players.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.typekit.net/wat0ivg.css">
 </head>
 
@@ -19,11 +19,11 @@
     <a class="navbar-brand"><img src="imgs/SF6.jpg" width="125" height="110"></img></a>
     <ul class="nav nav-pills">
       <li class="nav-item">
-        <a class="nav-link fs-1" href="html/index.html">Home</a>
+        <a class="nav-link fs-1" href="about.html">Home</a>
       </li>
       <li class="nav
       -item">
-        <a class="nav-link fs-1" href="html/players.html">Roster</a>
+        <a class="nav-link fs-1" href="players.html">Roster</a>
       </li>
     </ul>
   </nav>
@@ -45,8 +45,8 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-    <script src="js/players.js"></script>
-    <script src="js/roster.js"></script>
+    <script src="players.js"></script>
+    <script src="roster.js"></script>
 </body>
 
 </html>
