--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <!-- Required meta tags -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
@@ -15,6 +14,18 @@
 </head>
 
 <body>
-
+<body>
+  <main class="container mt-3">
+    <div id="Thing" class="row g-3 justify-content-center">
+      <div class="col-auto text-center">
+        <img src="imgs/SF.jpg" class="image-sizing img-fluid">
+        <p class="fs-1 text-white"> Welcome to the website!!! 
+          <br>
+          Click the button to learn about Street Fighter!!! </p>
+            <a class="btn btn-secondary border border-2 border-black" href="about.html" role="button">Go Now!</a>
+      </div>
+    </div>
+    </main>
 </body>
 </html>
+
