--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p class="fs-1 text-white"> Welcome to the website!!! 
           <br>
           Click the button to learn about Street Fighter!!! </p>
-            <a class="btn btn-secondary border border-2 border-black" href="about.html" role="button">Go Now!</a>
+            <a class="btn btn-warning border border-2 border-black" href="about.html" role="button">Go Now!</a>
       </div>
     </div>
     </main>
